# agilent_plateloc

./: .gitignore  LICENSE  README.md  config.example.toml  demo.py  film_settings.json  parameters.json  pyproject.toml
src/agilent_plateloc/: __init__.py  __main__.py  _com_server.py  api.py  claims.py  config.py  models.py  plateloc.py  service.py
src/agilent_plateloc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_claims.py
tests/fixtures/: status_busy.json  status_dry_run.json  status_ready.json  status_ready_claimed.json  status_requires_init.json
