[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agilent-plateloc"
version = "1.1.0"
description = "Python driver and REST API for the Agilent PlateLoc Thermal Microplate Sealer (lab status spec v1.1)"
readme = "README.md"
authors = [
    { name = "Yang Cao", email = "cyrilcaoyang@gmail.com" },
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    # Windows-only deps - the ActiveX control + COM surrogate only run on Windows.
    "pyserial>=3.5; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]
dev = [
    "pytest",
    "httpx",
    "pdfplumber",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
agilent-plateloc-serve = "agilent_plateloc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
